Updated README/Fixed tablesort onload/Removed copy-form on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -65,6 +65,7 @@ body {
     input {
       text-align: right;
     }
+    display: none;
   }
   .alert {
     //margin-left: 6rem;
